# medicalQA_llm_finetuning

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: FINETUNING.md  RESULTS.md
experiments/: COMPARISON.md  RESULTS.json
experiments/medmcqa/: base_eval.csv  finetuned_eval.csv
experiments/pubmedqa/: base_eval.csv  finetuned_eval.csv
scripts/: aggregate_results.py  check_device.py  colab_pubmedqa.sh  colab_resume.sh  colab_train.sh  evaluate.py  plot_comparison.py  prepare_dataset.py  run_experiment.py  serve.py  train.py  visualize_dataset.py
src/medicalqa_finetuning/: __init__.py  api.py  commands.py  config.py  data.py  evaluate.py  modeling.py  train.py  visualize.py
tests/: test_formatter.py
